fix photo jump add loss for restart game that didn't finish.

--- a/src/styles/scss/components/_info.scss
+++ b/src/styles/scss/components/_info.scss
@@ -30,6 +30,7 @@
         gap: $default-gap;
 
         .result {
+            @include center-flex(row);
             text-align: right;
             gap: $default-gap;
             white-space: nowrap;
