--- a/src/styles/scss/components/_status.scss
+++ b/src/styles/scss/components/_status.scss
@@ -13,6 +13,11 @@
     .hangman-image {
         height: auto;
         width: 80%;
+
+        img {
+            width: 100%;
+            height: 100%;
+        }
     }
 
     .attempts {
